// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SortOptions > should render SortOptions in default mode 1`] = `
<div
  class="tc-resource-picker-sort-options _tc-resource-picker-sort-options_7b730d"
>
  <span
    class="_option-label_7b730d"
  >
    Sort:
  </span>
  <button
    aria-describedby="00000000-0000-4000-8000-000000000000"
    aria-label="Sort by name (current order: desc)"
    class="tc-resource-picker-order-chooser _tc-resource-picker-order-chooser_0c35df btn-icon-only btn btn-link"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-sort-az"
      focusable="false"
      name="talend-sort-az"
      pointer-events="none"
      shape-rendering="geometricPrecision"
    />
    <svg
      aria-hidden="true"
      class="tc-svg-icon tc-icon _svg_bf5f45 tc-resource-picker-order-indicator _tc-resource-picker-order-indicator_0c35df tc-icon-name-talend-caret-down"
      focusable="false"
      name="talend-caret-down"
      pointer-events="none"
      shape-rendering="geometricPrecision"
    />
  </button>
  <button
    aria-describedby="00000000-0000-4000-8000-000000000000"
    aria-label="Sort by date (current order: desc)"
    class="tc-resource-picker-order-chooser _tc-resource-picker-order-chooser_0c35df btn-icon-only btn btn-link"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-sort-desc"
      focusable="false"
      name="talend-sort-desc"
      pointer-events="none"
      shape-rendering="geometricPrecision"
    />
    <svg
      aria-hidden="true"
      class="tc-svg-icon tc-icon _svg_bf5f45 tc-resource-picker-order-indicator _tc-resource-picker-order-indicator_0c35df tc-icon-name-talend-caret-down"
      focusable="false"
      name="talend-caret-down"
      pointer-events="none"
      shape-rendering="geometricPrecision"
    />
  </button>
</div>
`;

exports[`SortOptions should render SortOptions in default mode 1`] = `
<div
  class="tc-resource-picker-sort-options theme-tc-resource-picker-sort-options"
>
  <span
    class="theme-option-label"
  >
    Sort:
  </span>
  <button
    aria-describedby="42"
    aria-label="Sort by name (current order: desc)"
    class="tc-resource-picker-order-chooser theme-tc-resource-picker-order-chooser btn-icon-only btn btn-link"
    type="button"
  >
    <span
      class="CoralIcon"
      name="talend-sort-az"
    />
    <span
      class="CoralIcon tc-resource-picker-order-indicator theme-tc-resource-picker-order-indicator"
      name="talend-caret-down"
    />
  </button>
  <button
    aria-describedby="42"
    aria-label="Sort by date (current order: desc)"
    class="tc-resource-picker-order-chooser theme-tc-resource-picker-order-chooser btn-icon-only btn btn-link"
    type="button"
  >
    <span
      class="CoralIcon"
      name="talend-sort-desc"
    />
    <span
      class="CoralIcon tc-resource-picker-order-indicator theme-tc-resource-picker-order-indicator"
      name="talend-caret-down"
    />
  </button>
</div>
`;
